...
    private fun concrete(type: Type, subtype: Class<*>): Type =
        if (subtype.typeParameters.isNotEmpty() && type is ParameterizedType) {
            TypeToken.getParameterized(subtype, *type.actualTypeArguments).type
        } else subtype

    override fun serialize(src: Any, type: Type, context: JsonSerializationContext): JsonElement {
        val tag = types.entries.single { it.value == src.javaClass }.key
        return JsonObject().apply {
            addProperty("tag", tag)
            add("data", context.serialize(src, concrete(type, src.javaClass)))
        }
    }

...
